# MLOps_UdM

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  COURSE_OVERVIEW.md  README.md  dummy.md  pyproject.toml
.githooks/: commit-msg  pre-push
.github/workflows/: ci.yml
00-Setup/: 01-git-github.md  01.1-conventional-commits.md  02-python-envs.md  02.1-uv-conda-venv.md  04-tooling.md  08-pre-commit.md  09-cicd-guide.md  10-git-lfs.md  README.md  Resumen.md  ejercicio-setup.md
00-Setup/templates/: pre-commit-config.yaml
01-Intro-ML/: 01_mlops_intro_notebook.ipynb  02_regression_temporal_notebook.ipynb  README.md  generate_data.py  generate_demand_data.py
01-Intro-ML/my-first-env-with-uv/: pyproject.toml
02-Experiment-Tracking/: README.md
02-Experiment-Tracking/notebooks/: 02_experiment_tracking_intro.ipynb  03_mlflow_advanced.ipynb
03-Orchestrarion/: README.md  duration-prediction.py
03-Orchestrarion/00-intro-prefect/workflows/: create_secret.py
03-Orchestrarion/Prefect-pipelines/: README.md
03-Orchestrarion/Prefect-pipelines/src/: data.py
03-Orchestration/00-intro-prefect/: prefect.yaml
03-Orchestration/Prefect-pipelines/src/: config.py  features.py  model.py
04-Deployment/deploy/intro-dockers/: README.md
04-Deployment/deploy/web-service/: Dockerfile  app.py  test.py
05-Monitoring/: README.md
notebooks/: 01_mlops_intro_notebook_cano.ipynb
