[project]
name = "proyecto-final-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "mlflow>=3.3.2",
    "numpy>=2.3.3",
    "optuna>=3.6.0",
    "optuna-integration>=4.5.0",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.0.5",
]
